<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Scroll Lock</string>
    <string name="profilePicture">usersprofilepicture</string>
    <string name="login">Sign In</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="mentions">Mentions</string>
    <string name="dms">DMs</string>
    <string name="theme">Theme</string>
</resources>
