<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/back_button"
        android:showAsAction="always|withText"
        android:title="@string/back"/>
    <item
        android:id="@+id/home_timeline_button"
        android:icon="@drawable/home"
        android:showAsAction="always|withText"
        android:title="@string/home"/>
    <item
        android:id="@+id/mentions_button"
        android:icon="@drawable/mentions"
        android:showAsAction="always|withText"
        android:title="@string/mentions"/>
    <item
        android:id="@+id/dms_button"
        android:icon="@drawable/message"
        android:showAsAction="always|withText"
        android:title="@string/dms"/>
    <item
        android:id="@+id/settings_button"
        android:showAsAction="always|withText"
        android:title="@string/settings"/>
    <item
        android:id="@+id/refresh_button"
        android:showAsAction="always|withText"
        android:title="@string/refresh"/>

</menu>